third_party/vendor/rustversion-1.0.5/tests/ui/bad-version.stderr
error: expected rustc release number, like 1.31
 --> $DIR/bad-version.rs:1:23
  |
1 | #[rustversion::stable(nightly)]
  |                       ^^^^^^^

error: expected rustc release number, like 1.31
 --> $DIR/bad-version.rs:4:27
  |
4 | #[rustversion::any(stable(nightly))]
  |                           ^^^^^^^
